--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,5 @@ dmypy.json
 
 # PyCharm IDLE
 .idea/
+
+Test Results - solicitar_servicio_feature_Solicitar_servicios_cuando_el_voluntario_tiene_las_habilidades_requeridas_para_atender_la_emergencia.html
