--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@ coverage.xml
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
+identifier.sqlite
 
 # Flask stuff:
 instance/
@@ -130,3 +131,6 @@ dmypy.json
 
 # PyCharm IDLE
 .idea/
+
+# Gherkin features executions
+*feature.html
